[package]
name = "lightbulb-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.3.2", features = ["server","macros", "transport-io"] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
